--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,8 @@
-//
+// Fonts
+@import url("https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap");
+
+// Variables
+@import "variables";
+
+// Bootstrap
+@import "~bootstrap/scss/bootstrap";
